@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.5238 2006/11/11 00:40:35 modalsist Exp $
+ * $Id: ChangeLog,v 1.5239 2006/11/11 03:48:20 druzus Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,17 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2006-11-11 11:30 UTC-0300 Eduardo Fernandes <modalsist@yahoo.com.br>
+  * source\rtl\transfrm.c
+    ! fixed compiler error.
+
+  * make_b32.bat
+    + added rdds.lib, rddsmt.lib, usrrdd.lib, usrrddmt.lib, gtgui.lib
+      and libmisc.lib in clean session.
+
+  * make_pc.bat
+    + added bmdbfcdx.lib and bmdbfcdxmt.lib in clean session.
 
 2006-11-11 04:50 UTC+0100 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
   * harbour/source/rdd/workarea.c
